--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
 
     <section class="section photo">
-     <img src="C:\Users\rache\Downloads\IMG_6512.JPEG" alt="Tyler and Cabrina">
+     <img src="IMG_6512.JPEG" alt="Tyler and Cabrina">
       <p>We can't wait to share this special moment with you.</p>
     </section>
 
@@ -120,3 +120,4 @@
 
 </body>
 </html>
+
