--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Join Tyler & Cabrina on May 16th, 2026, for their wedding in Port Saint Lucie, FL. Find venue details, hotel options, and more.">
+  <meta name="description" content="Join Tyler & Cabrina on May 16th, 2026, for their wedding in Port Saint Lucie, FL. Find venue details, hotel options, and travel information.">
   <title>Tyler & Cabrina's Wedding</title>
+
   <style>
     body {
       font-family: 'Georgia', serif;
@@ -15,7 +16,7 @@
     }
 
     header {
-      background: linear-gradient(to right, #a2c4f7, #ffc0cb); /* blue to pink */
+      background: linear-gradient(to right, #a2c4f7, #ffc0cb);
       color: white;
       text-align: center;
       padding: 2rem 1rem;
@@ -46,6 +47,7 @@
       border-bottom: 2px solid #ffc0cb;
       padding-bottom: 0.5rem;
       display: inline-block;
+      margin-bottom: 1rem;
     }
 
     .photo {
@@ -60,18 +62,37 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
+    ul {
+      text-align: left;
+      display: inline-block;
+      padding-left: 0;
+      list-style-type: none;
+    }
+
+    ul li {
+      margin-bottom: 1.5rem;
+      line-height: 1.6;
+    }
+
+    a {
+      color: #a2c4f7;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     footer {
       background-color: #a2c4f7;
       color: white;
       text-align: center;
       padding: 1rem;
     }
-    ul {
-      text-align: left;
-      display: inline-block;
-    }
   </style>
 </head>
+
 <body>
 
   <header>
@@ -81,15 +102,13 @@
 
   <div class="container">
 
-
-
     <section class="section">
       <h2>Wedding Date</h2>
       <p>Join us on <strong>May 16, 2026</strong> to celebrate our big day!</p>
     </section>
 
     <section class="section photo">
-     <img src="./IMG_6512.JPEG" alt="Tyler and Cabrina">
+      <img src="img-6512.jpg" alt="Tyler and Cabrina">
       <p>We can't wait to share this special moment with you.</p>
     </section>
 
@@ -97,19 +116,54 @@
       <h2>Wedding Venue</h2>
       <p>The ceremony and reception will take place at:</p>
       <address>
-        10799 SW Civic Lane, <br>
-	Port Saint Lucie, FL <br>
-	34987
+        Tradition Town Hall
+		10799 SW Civic Lane<br>
+        Port Saint Lucie, FL<br>
+        34987
       </address>
     </section>
 
     <section class="section">
       <h2>Hotel Accommodations</h2>
-      <p>Here are some nearby hotel options for your stay:</p>
+      <p>Please mention the <strong>Tyler & Cabrina wedding</strong> when calling for special rates.</p>
+
       <ul>
-        <li><strong>Courtyard by Marriott, Port Saint Lucie, Tradition</strong> - 0.7 miles from venue - <a href="https://www.marriott.com/search/availabilityCalendar.mi?isRateCalendar=true&propertyCode=PBICP&isSearch=true&currency=&costTab=total#/0/">Book here</a></li>
-        <li><strong>Homewood Suites by Hilton, Port Saint Lucie, Tradition</strong> - 0.8 miles from venue - <a href="https://www.hilton.com/en/locations/usa/florida/port-st-lucie/homewood-suites/?WT.mc_id=zlada0ww1hw2psh3bng4advbpp5dkt6multibr7_153658496_1004635&gclid=fcd0d1ddd9cf12b2758fb938c6d88455&gclsrc=3p.ds&msclkid=fcd0d1ddd9cf12b2758fb938c6d88455&utm_source=bing&utm_medium=cpc&utm_campaign=AO%7CDTSU%7CADV%7CEVG%7CHW%7CCONV%7CSEM%7CNA%7CBAD%7CUSA_FL_Central%7CCROSS%7CCPC%7CNA%7CTXT%7CEN%7CExact%7C&utm_term=homewood%20hotel%20port%20saint%20lucie&utm_content=US%7CFL%7CPort_Saint_Lucie%7CALL%7COK#">Book here</a></li>
-     	</ul>
+        <li>
+          <strong>Courtyard by Marriott, Port Saint Lucie – Tradition</strong><br>
+          0.7 miles from venue<br>
+           <a href="tel:+17723456789">(772) 345-6789</a><br>
+          <a href="https://www.marriott.com/search/availabilityCalendar.mi?isRateCalendar=true&propertyCode=PBICP&isSearch=true&currency=&costTab=total#/0/">Book online</a>
+        </li>
+
+        <li>
+          <strong>Homewood Suites by Hilton, Port Saint Lucie – Tradition</strong><br>
+          0.8 miles from venue<br>
+          <a href="tel:+17729876543">(772) 987-6543</a><br>
+          <a href="https://www.hilton.com/en/locations/usa/florida/port-st-lucie/homewood-suites/">Book online</a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Closest Airports</h2>
+      <p>For our out-of-town guests, the following airports are closest to the venue:</p>
+
+      <ul>
+        <li>
+          <strong>Palm Beach International Airport (PBI)</strong><br>
+          Approximately 50 miles (about 1 hour drive)
+        </li>
+
+        <li>
+          <strong>Fort Lauderdale–Hollywood International Airport (FLL)</strong><br>
+          Approximately 105 miles (about 1 hour 45 minutes drive)
+        </li>
+
+        <li>
+          <strong>Orlando International Airport (MCO)</strong><br>
+          Approximately 130 miles (about 2.5 hours drive)
+        </li>
+      </ul>
     </section>
 
   </div>
@@ -120,6 +174,8 @@
 
 </body>
 </html>
+
+
 
 
 
