--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
     <section class="section photo">
-      <img src="IMG-6512.JPEG" alt="Tyler and Cabrina">
+      <img src="IMG_6512.JPEG" alt="Tyler and Cabrina">
       <p>We can't wait to share this special moment with you.</p>
     </section>
 
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
