--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       <h2>Wedding Venue</h2>
       <p>The ceremony and reception will take place at:</p>
       <address>
+        Tradition Town Hall <br>
         10799 SW Civic Lane<br>
         Port Saint Lucie, FL<br>
         34987
@@ -184,5 +185,6 @@
 
 </body>
 </html>
+
 
 
