--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Join Tyler & Cabrina on May 16th, 2026, for their wedding in Port Saint Lucie, FL. Find venue details, hotel options, travel information, and their wedding registry.">
+  <meta name="description" content="Join Tyler & Cabrina on May 16th, 2026 at 4:00pm for their wedding in Port Saint Lucie, FL. Find venue details, hotel options, travel information, and wedding registry.">
   <title>Tyler & Cabrina's Wedding</title>
 
   <style>
@@ -110,7 +110,7 @@
 
     <section class="section photo">
       <img src="IMG_6512.JPEG" alt="Tyler and Cabrina">
-      <p>We can't wait to share this special moment with you.</p>
+      <p>We can't wait to share this special moment with you!</p>
     </section>
 
     <section class="section">
@@ -119,8 +119,7 @@
       <address>
         Tradition Town Hall <br>
         10799 SW Civic Lane<br>
-        Port Saint Lucie, FL<br>
-        34987
+        Port Saint Lucie, FL 34987
       </address>
     </section>
 
@@ -132,44 +131,46 @@
         <li>
           <strong>Courtyard by Marriott, Port Saint Lucie – Tradition</strong><br>
           0.7 miles from venue<br>
-          <a href="tel:+17723456789">(772) 345-6789</a><br>
-          <a href="https://www.marriott.com/search/availabilityCalendar.mi?isRateCalendar=true&propertyCode=PBICP&isSearch=true&currency=&costTab=total#/0/">Book online</a>
+          <a href="tel:+17723456789">(772) 732-9300</a><br>
         </li>
 
         <li>
           <strong>Homewood Suites by Hilton, Port Saint Lucie – Tradition</strong><br>
           0.8 miles from venue<br>
-          <a href="tel:+17729876543">(772) 987-6543</a><br>
-          <a href="https://www.hilton.com/en/locations/usa/florida/port-st-lucie/homewood-suites/">Book online</a>
+          <a href="tel:+17729876543">(772) 345-5300</a><br>
         </li>
       </ul>
     </section>
 
     <section class="section">
       <h2>Closest Airports</h2>
-      <p>For our out-of-town guests, the following airports are closest to the venue:</p>
 
       <ul>
         <li>
           <strong>Palm Beach International Airport (PBI)</strong><br>
-          Approximately 50 miles (about 1 hour drive)
+          50 miles
         </li>
 
         <li>
           <strong>Fort Lauderdale–Hollywood International Airport (FLL)</strong><br>
-          Approximately 105 miles (about 1 hour 45 minutes drive)
+          98 miles
         </li>
 
         <li>
           <strong>Orlando International Airport (MCO)</strong><br>
-          Approximately 130 miles (about 2.5 hours drive)
+          98 miles
+        </li>
+
+        <li>
+          <strong> Vero Beach Regional Airport (VRB)</strong><br>
+          34 miles
         </li>
       </ul>
     </section>
 
     <section class="section">
       <h2>Wedding Registry</h2>
-      <p>Your love and support mean the world to us! If you’d like to help us celebrate, you can view our registry here:</p>
+      <p>Your presence is the best present; but, if you must...</p>
       <p>
         <a href="https://www.zola.com/registry/cabrinaandtyler" target="_blank" rel="noopener noreferrer">
           View Our Registry
@@ -185,6 +186,7 @@
 
 </body>
 </html>
+
 
 
 
