--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <section class="section">
       <h2>Wedding Date</h2>
-      <p>Join us on <strong>May 16, 2026</strong> to celebrate our big day!</p>
+      <p>Join us on <strong>May 16, 2026</strong> at <strong>4:00pm</strong> to celebrate our big day!</p>
     </section>
 
     <section class="section photo">
@@ -186,6 +186,7 @@
 
 </body>
 </html>
+
 
 
 
