--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         <li>
           <strong>Courtyard by Marriott, Port Saint Lucie – Tradition</strong><br>
           0.7 miles from venue<br>
-          <a href="tel:+17723456789">(772) 732-9300</a><br>
+          <a href="tel:+17727329300">(772) 732-9300</a><br>
         </li>
 
         <li>
           <strong>Homewood Suites by Hilton, Port Saint Lucie – Tradition</strong><br>
           0.8 miles from venue<br>
-          <a href="tel:+17729876543">(772) 345-5300</a><br>
+          <a href="tel:+17723455300">(772) 345-5300</a><br>
         </li>
       </ul>
     </section>
@@ -181,11 +181,12 @@
   </div>
 
   <footer>
-    <p>With love, Tyler & Cabrina &mdash; May 16, 2026</p>
+    <p>With love, Tyler & Cabrina - May 16, 2026</p>
   </footer>
 
 </body>
 </html>
+
 
 
 
