--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <section class="section">
       <h2>Wedding Registry</h2>
-      <p>Your presence is the best present; but, if you must...</p>
+      <p>Your presence is the best present; but, if you must...</p><br>
       <p>
         <a href="https://www.zola.com/registry/cabrinaandtyler" target="_blank" rel="noopener noreferrer">
           View Our Registry
@@ -186,6 +186,7 @@
 
 </body>
 </html>
+
 
 
 
